--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.14",
+    "@mdx-js/react": "^1.0.27",
     "@sindresorhus/slugify": "^0.9.1",
     "axios": "^0.19.0",
     "crypto": "^1.0.1",
     "dotenv": "^8.0.0",
+    "fs": "^0.0.1-security",
     "gatsby": "^2.13.1",
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-manifest": "^2.2.1",
@@ -23,7 +26,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0"
+    "react-icons": "^3.7.0",
+    "react-markdown": "^4.1.0",
+    "theme-ui": "^0.2.14"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
